--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
         transition: opacity 0.2s ease-in-out;
         opacity: 0;
       }
+      .vh-100 > .page-loading-inner {
+        opacity: 1;
+      }
       .page-loading.active > .page-loading-inner {
         opacity: 1;
       }
