--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
     <div id="root"></div>
     <!-- Vendor scrits: js libraries and plugins-->
     <script src="vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/simplebar/dist/simplebar.min.js"></script>
+    <!-- <script src="vendor/simplebar/dist/simplebar.min.js"></script> -->
     <script src="vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     <script src="vendor/tiny-slider/dist/min/tiny-slider.js"></script>
     <!-- Main theme script-->
